--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -13,6 +13,10 @@ $color-dark-green:#2FAF33;
 $color-orange-light:#FB9A02;
 $color-orange-dark:#F05804;
 
+//font
+
+$default-font-size:1.6rem;
+
 //grid
 
 $grid-width:114rem;
