--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -42,3 +42,18 @@
     transform:skewY(2deg);
   }
 }
+
+
+.heading-tertiary{
+  font-size: $default-font-size;
+  font-weight: 700;
+  text-transform:uppercase;
+}
+
+.parragraph{
+  font-size: $default-font-size;
+  &:not(:last-child){
+    margin-bottom: 3rem;
+  }
+
+}
