--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -7,7 +7,7 @@
     display: inline-block;
     transition: all .2s;
     position:relative;
-    font-size:1.6rem;
+    font-size:$default-font-size;
     border-radius: 10rem;
   }
   &:hover{
@@ -50,4 +50,29 @@
   }
 }
 
+.btn-text{
+  &:link,
+  &:visited{
+    color:$color-orange-light;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 1px solid $color-orange-light;
+    font-size: $default-font-size;
+    padding:3px;
+    transition:all .2s;
+  }
+
+  &:hover{
+    background-color: $color-orange-light;
+    color: $color-white;
+    box-shadow: (0 1rem 2rem rgba($color-black, .15));
+    transform:translateY(-2px);
+
+  }
+
+  &:active{
+    box-shadow: (0 .5rem 1rem rgba($color-black, .15));
+    transform:translateY(0px);
+  }
+}
 
