--- a/css/main.css
+++ b/css/main.css
@@ -181,6 +181,22 @@ body {
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.9); }
 
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  padding: 4rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: all .3s; }
+  .feature-box .icon {
+    width: 50%;
+    margin-bottom: 2rem;
+    display: inline-block;
+    fill: url(#my-cool-gradient) #447799; }
+  .feature-box:hover {
+    transform: translateY(-1.5rem) scale(1.03); }
+
 .header {
   position: relative;
   height: 95vh;
@@ -214,19 +230,27 @@ body {
   .row [class^="col-"] {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
-      margin-right: 2rem; }
+      margin-right: 6rem; }
   .row .col-1-of-1 {
     width: 100%; }
   .row .col-1-of-2 {
-    width: calc((100% - 2rem) / 2); }
+    width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
-    width: calc((100% - 2*2rem) / 3); }
+    width: calc((100% - 2*6rem) / 3); }
   .row .col-1-of-4 {
-    width: calc((100% - 3*2rem) / 4); }
+    width: calc((100% - 3*6rem) / 4); }
   .row .col-2-of-3 {
-    width: calc(2*((100% - 2*2rem) / 3) + 2rem); }
+    width: calc(2*((100% - 2*6rem) / 3) + 6rem); }
 
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -30vh; }
+
+.section-features {
+  margin-top: -40vh;
+  padding: 40rem 0;
+  background-image: linear-gradient(to bottom, rgba(251, 154, 2, 0.6), rgba(240, 88, 4, 0.3)), url(../images/adventure.jpg);
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 80%); }
