--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,12 +9,15 @@
 
 @import "components/buttons";
 @import "components/composition";
+@import "components/feature-box";
 
 
 @import "layout/header";
 @import "layout/grid";
 
 @import "pages/home";
+
+
 
 
 
