--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -4,4 +4,12 @@
   margin-top:-30vh;
 }
 
+.section-features{
+  margin-top:-40vh;
+  padding:40rem 0;
+  background-image:linear-gradient(to bottom,rgba($color-orange-light, 0.6),rgba($color-orange-dark, 0.3)),url(../images/adventure.jpg);
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 80%);
+}
 
