--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -3,6 +3,7 @@
 $color-black:#000;
 $color-white:#fff;
 $color-light-grey-1:#f7f7f7;
+$color-light-grey-2:#eee;
 $color-grey:#777;
 $color-dark-grey:#999;
 
@@ -13,6 +14,19 @@ $color-dark-green:#2FAF33;
 $color-orange-light:#FB9A02;
 $color-orange-dark:#F05804;
 
+
+//card colors
+
+$color-ocean-light: #7FD1B9;
+$color-ocean-dark: #3EC49C;
+
+
+$color-pink-light:#F88379;
+$color-pink-dark: #FA7268;
+
+$color-orangeyellow-light:#FFD670;
+$color-orangeyellow-dark:#FFA830;
+
 //font
 
 $default-font-size:1.6rem;
@@ -21,4 +35,6 @@ $default-font-size:1.6rem;
 
 $grid-width:114rem;
 $gutter-vertical:8rem;
-$gutter-horizontal:6rem;
+$gutter-horizontal:3rem;
+
+
