--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -31,6 +31,14 @@
     }
   }
 
+  &--orange{
+    background-color: $color-orange-light;
+    color:$color-white;
+    &::after{
+      background-color: $color-orange-light;
+    }
+  }
+
   &::after{
     content:"";
     display: inline-block;
