--- a/scss/components/_feature-box.scss
+++ b/scss/components/_feature-box.scss
@@ -1,7 +1,7 @@
 .feature-box{
   background-color: rgba($color-white,.8);
   font-size: 1.5rem;
-  padding:4rem;
+  padding: 3rem 5rem 3rem 5rem;
   text-align: center;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black,.15);
