--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -4,6 +4,7 @@
   background-image:linear-gradient(to bottom,rgba(225, 66, 1, 0.4),rgba(240, 88, 4, 0.3)),url(../images/backpack.jpg);
   background-size: cover;
   background-position: top;
+  -webkit-clip-path: polygon(0 0, 100% 20%, 100% 75vh, 0% 100%);
   clip-path: polygon(0 0, 100% 20%, 100% 75vh, 0% 100%);
 
 
