--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -6,10 +6,17 @@
 
 .section-features{
   margin-top:-40vh;
-  padding:40rem 0;
-  background-image:linear-gradient(to bottom,rgba($color-orange-light, 0.6),rgba($color-orange-dark, 0.3)),url(../images/adventure.jpg);
+  padding:25rem 0 20rem 0;
+  background-image:linear-gradient(to bottom,rgba($color-orange-light, 0.6),rgba($color-orange-dark, 0.3)),url(../images/adventure-2.jpg);
   background-size: cover;
   background-position: top;
-  clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 80%);
+  -webkit-clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
+  clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
 }
 
+.section-tours{
+  background-color: $color-light-grey-1;
+  padding: 25rem 0 5rem 0;
+  margin-top:-25vh;
+
+}
